it works, now need to work on the things

--- a/client-spring/src/main/resources/static/index.html
+++ b/client-spring/src/main/resources/static/index.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-<span>server:</span><input type="text" id = "server"></input>
+<span>server:</span><input type="text" id = "server"></input><span><button onclick="fetch()">fetch</button></span>
 <div id="textbox" style="height: 70vh;overflow: scroll;">
 </div>
 <textarea id="input" cols="80" rows="5"></textarea>
